# hecate

./: .env  .env.dev  .env.public  .env.test  .gitignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  composer.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
config/: bundles.php  routes.yaml  services.yaml
documentation/: MCD-hecate.drawio  projectRouteSchema.drawio  serviceSchemas.drawio
fixtures/: RecursiveEntityPersiste.php
migrations/: Version20241228165047.php
public/: index.php
qa/: .php-cs-fixer.dist.php
src/: Kernel.php  app.module.ts  lib.rs  main.rs  main.ts  typeorm.config.ts
src/article-cg/: articile-cg.module.spec.ts  article-cg.module.ts
src/auth/: auth.module.spec.ts  auth.module.ts
src/aws/: aws-s3.service.ts
src/condition-general/: condition-general.module.spec.ts  condition-general.module.ts
src/database/: database-source.ts  database.module.ts
src/fixture/: seed.fixture.ts
src/image/: image.module.spec.ts  image.module.ts
src/migrations/: 1728073935473-migration.ts  1728115274271-migration.ts  1729321269755-migration.ts  1729344325486-migration.ts
src/ping/: ping.module.spec.ts  ping.module.ts
src/project/: project.module.spec.ts  project.module.ts
src/role/: role.module.spec.ts
src/service/: service.module.spec.ts  service.module.ts
src/techno/: techno.module.spec.ts  techno.module.ts
src/user/: user.module.spec.ts
test/: jest.setup.ts
tests/: bootstrap.php  phpunit.xml
tests/Extension/: FakerExtension.php
(+118 files in other folders)
