[package]
name = "app"
version = "0.1.0"
edition = "2021"

# Binaire
[[bin]]
name = "hecate_bin"
path = "src/main.rs"

# Librairie
[lib]
name = "hecate_lib"
path = "src/lib.rs"

[dependencies]
# serveur actix
actix-web = "4.9.0"
actix-cors = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# async
tokio = { version = "1.40.0", features = ["full"] }

# serialisation
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

#documentation
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web", "debug-embed"] }